[gd_scene load_steps=2 format=3 uid="uid://c0upaf0c6rieg"]

[ext_resource type="Script" path="res://menu.gd" id="1_mucjs"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mucjs")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -101.0
offset_right = 76.0
grow_vertical = 0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sākt"

[node name="AboutButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Par Spēli"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Beigt"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/AboutButton" to="." method="_on_about_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
